<resources>
    <string name="app_name">UserList</string>
    <string name="template_username">Firstname Lastname</string>
    <string name="template_email">mailto@gmail.com</string>
    <string name="content_description_avatar">avatar</string>
    <string name="content_description_more">more</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">E-mail</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_reload_users">Reload users from server</string>
</resources>
